2004-10-27  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am (AM_LDFLAGS): Fix to always link tests against
	locally built library, not installed version.

	* test/fill_rule.c: Add new test for cairo_set_fill_rule. Also
	demonstrate some of the current tessellation bugs with the version
	of the code that is in CVS.

2004-10-26  Carl Worth  <cworth@cworth.org>

	* test/cairo_test.c (cairo_test): Find reference images in
	${srcdir} so that make distcheck will work.

	* test/Makefile.am (cairo_test_lib): Add header files so that make
	distcheck is happy.
	(INCLUDES): Add -D_GNU_SOURCE for asprintf. Someone motivated may
	want to find a more portable approach.
	(EXTRA_DIST): Add reference images for the sake of make distcheck.

	* configure.in: Shell doesn't like whitespace around assignment
	operator.

	* test/README: Add paragraph on new features.	

	* test/.cvsignore:
	* test/Makefile.am:
	* test/README:
	* test/cairo_test.c:
	* test/cairo_test.h:
	* test/line_width-ref.png:
	* test/line_width.c:
	* test/move_to_show_surface-ref.png:
	* test/move_to_show_surface.c:
	* test/read_png.c:
	* test/read_png.h:
	* test/write_png.c:
	* test/write_png.h:
	* test/xmalloc.c:
	* test/xmalloc.h: Add initial regression test suite.

	* configure.in: Don't AC_SUBST a dozen different FOO_CFLAGS and
	FOO_LIBS. Instead, incrementally build up just CAIRO_CFLAGS and
	CAIRO_LIBS.

	* cairo.pc.in (Libs): Don't list flags that should get picked up
	via dependency information through Requires.

	* BUGS (font-size): Add description of move_to_show_surface.

2004-10-21  Carl Worth  <cworth@cworth.org>

	* src/cairo_png_surface.c:
	* src/cairo.c:
	* src/cairo.h:
	* src/cairo_cache.c:
	* src/cairo_color.c:
	* src/cairo_fixed.c:
	* src/cairo_font.c:
	* src/cairo_ft_font.c:
	* src/cairo_glitz_surface.c:
	* src/cairo_gstate.c:
	* src/cairo_hull.c:
	* src/cairo_image_surface.c:
	* src/cairo_matrix.c:
	* src/cairo_path.c:
	* src/cairo_path_bounds.c:
	* src/cairo_path_fill.c: